Grease Pencil eraser doesn't work when activated using D+RMB when using a tablet #47101

Closed
opened 2016-01-01 06:30:38 +01:00 by Massimiliano Puliero · 5 comments

System Information
win7 64 gtx 970

Blender Version
Broken: hash 5e974a3
Worked: official 2.76

Short description of error
Grease Pencil erase fuction is not working anymore

Exact steps for others to reproduce the error
open the file and try to erase the grease pencil strokes

penscil_erase.blend

**System Information** win7 64 gtx 970 **Blender Version** Broken: hash 5e974a3 Worked: official 2.76 **Short description of error** Grease Pencil erase fuction is not working anymore **Exact steps for others to reproduce the error** open the file and try to erase the grease pencil strokes [penscil_erase.blend](https://archive.blender.org/developer/F271188/penscil_erase.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Joshua Leung self-assigned this 2016-01-01 11:13:06 +01:00
Member

This only happens when using D + RMB (via a stylus). It happens because the tablet isn't recording any pressure values (as you need to hover over the tablet surface without touching it), which causes problems now the eraser is pressure sensitive.

The workaround until then is to either use the "eraser" end of the pen, or to use a mouse instead.

This only happens when using D + RMB (via a stylus). It happens because the tablet isn't recording any pressure values (as you need to hover over the tablet surface without touching it), which causes problems now the eraser is pressure sensitive. The workaround until then is to either use the "eraser" end of the pen, or to use a mouse instead.
Joshua Leung changed title from Grease Pencil erase fuction is not working anymore to Grease Pencil eraser doesn't work when activated using D+RMB when using a tablet 2016-01-11 00:24:23 +01:00

This issue was referenced by 74f291cdea

This issue was referenced by 74f291cdea9799b31761fc06e4052ae3c470c075
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#47101
No description provided.